--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/backend/src/$1"
+      "destination": "/backend/src/index.js"
     }
   ],
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
         {
           "key": "Access-Control-Allow-Methods",
           "value": "GET,POST,PUT,DELETE,OPTIONS"
@@ -31,8 +34,32 @@
     },
     {
       "src": "backend/src/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "backend/src/db.js",
+          "backend/src/middleware/**",
+          "backend/src/routes/**",
+          "backend/src/utils/**",
+          "backend/package.json",
+          "backend/node_modules/**"
+        ]
+      }
     }
   ],
-  "installCommand": "npm install --prefix frontend && npm install --prefix backend"
+  "installCommand": "npm install --prefix frontend && npm install --prefix backend",
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/src/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/dist/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/frontend/dist/index.html"
+    }
+  ]
 }
