--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,19 @@
       ]
     }
   ],
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist",
+        "buildCommand": "npm run build" // <--- EXPLICITLY RUNS 'npm run build' INSIDE 'frontend/'
+      }
+    },
+    {
+      "src": "backend/src/index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "installCommand": "npm install --prefix frontend && npm install --prefix backend"
 }
