--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist",
-        "buildCommand": "npm run build"
+        "buildCommand": "npm install && npm run build"
       }
     },
     {
@@ -35,5 +35,5 @@
       "use": "@vercel/node"
     }
   ],
-  "installCommand": "npm install --prefix frontend && npm install --prefix backend"
+  "installCommand": "npm install --prefix backend"
 }
