--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/index.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm install && npm run build"
       }
+    },
+    {
+      "src": "backend/src/index.js",
+      "use": "@vercel/node"
     }
   ],
   "rewrites": [
@@ -22,5 +23,6 @@
       "source": "/(.*)",
       "destination": "/frontend/dist/index.html"
     }
-  ]
+  ],
+  "installCommand": "npm install --prefix frontend && npm install --prefix backend"
 }
