--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,10 @@
     },
     {
       "src": "backend/src/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["backend/**"]
+      }
     }
   ],
   "rewrites": [
