--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "backend",
+  "name": "splitease-backend", 
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
+    "start": "node src/index.js", 
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
