--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "splitease-backend", 
+  "name": "splitease-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js", 
+  "main": "src/index.js",
   "scripts": {
-    "start": "node api/index.js", 
+    "start": "node src/api/index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
