--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,17 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "paypal-rest-sdk": "^1.8.1",
-    "pg": "^8.16.1"
+    "pdfkit": "^0.17.1",
+    "pg": "^8.16.1",
+    "sharp": "^0.34.3",
+    "uuid": "^11.1.0"
   }
 }
