--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.1",
+    "puppeteer": "^24.15.0",
     "sharp": "^0.34.3",
     "uuid": "^11.1.0"
   }
