--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
+    "html2canvas": "^1.4.1",
     "i18next-http-backend": "^3.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
